--- a/src/app/resume/projects/projects.component.html
+++ b/src/app/resume/projects/projects.component.html
@@ -1,2 +1,2 @@
-<h1>Projets personnels</h1>
+<h1>{{ global.personal_projects }}</h1>
 <app-presentation *ngFor="let project of projects" [presentation]="getPresentation(project)"></app-presentation>
