--- a/src/app/resume/pdf-template/pdf-template.component.html
+++ b/src/app/resume/pdf-template/pdf-template.component.html
@@ -1,17 +1,27 @@
 <kendo-pdf-export #pdf paperSize="a4">
-    <div class="pdfPage">
-        <ng-template #template kendoPDFTemplate let-pageNum="pageNum" let-totalPages="totalPages">
-            <app-topcard *ngIf="resume" [info]="resume.info"></app-topcard>
-            <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages>
-        </ng-template>
-        
-        <ng-container *ngTemplateOutlet="template"></ng-container>
+  <div class="pdfPage">
+    <ng-template #template kendoPDFTemplate let-pageNum="pageNum" let-totalPages="totalPages">
+      <app-topcard *ngIf="resume" [global]="resume.global" [info]="resume.info"></app-topcard>
+      <app-languages
+        *ngIf="resume"
+        [global]="resume.global"
+        [languages]="resume.languages"
+        class="page"
+      ></app-languages>
+    </ng-template>
 
-        <div class="pdfPageElements">
-            <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
-            <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
-            <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education>
-            <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
-        </div>
+    <ng-container *ngTemplateOutlet="template"></ng-container>
+
+    <div class="pdfPageElements">
+      <app-skills *ngIf="resume" [global]="resume.global" [abilities]="resume.abilities" class="page"></app-skills>
+      <app-career *ngIf="resume" [global]="resume.global" [jobs]="resume.career" class="page"></app-career>
+      <app-education
+        *ngIf="resume"
+        [global]="resume.global"
+        [education]="resume.education"
+        class="page"
+      ></app-education>
+      <app-projects *ngIf="resume" [global]="resume.global" [projects]="resume.projects" class="page"></app-projects>
     </div>
+  </div>
 </kendo-pdf-export>
