--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -34,7 +34,7 @@
     border: 3px solid white;
     border-radius: 100%;
     background-color: white;
-    background-image: url('./../../../assets/images/cat.jpg');
+    background-image: url('./../../../assets/images/hm.jpg');
     background-position: center;
     background-size: cover;
     background-color: $third;
