--- a/src/app/resume/languages/languages.component.scss
+++ b/src/app/resume/languages/languages.component.scss
@@ -3,10 +3,15 @@
         filter: none;
     }
 }
+h1 {
+  color: white;
+  font-size: 22px;
+}
 
 .flags {
     display: flex;
     margin: 10px 0 0 0;
+    flex-direction: column;
 
     .flag {
         display: flex;
@@ -15,8 +20,8 @@
         margin-right: 100px;
         
         img {
-            width: 50px;
-            height: 30px;
+            width: 25px;
+            height: 15px;
             margin: 5px 0 0 0;
             transition-duration: 200ms;
             filter: grayscale(.5);
