--- a/src/app/resume/projects/projects.component.scss
+++ b/src/app/resume/projects/projects.component.scss
@@ -2,7 +2,7 @@
 
 app-presentation {
     margin-left: -25px;
-    padding: 15px 0;
+    padding: 2px 0 6px;
     border-bottom: 1px solid $light;
 }
 
