--- a/src/app/shared/presentation/presentation.component.scss
+++ b/src/app/shared/presentation/presentation.component.scss
@@ -81,10 +81,9 @@
     border-left: solid 3px lightgrey;
     opacity: 0.8;
     text-align: justify;
+    word-break: break-all;
 }
 
-.tooltip {
-}
 
 .tooltip .tooltiptext {
   visibility: hidden;
