improve current version of the resume

--- a/src/app/shared/label/label.component.html
+++ b/src/app/shared/label/label.component.html
@@ -1,4 +1,4 @@
 <div class="label">
-  <span class="title">{{ title }}</span>
+  <span class="title" [innerHTML]="title"></span>
   <span *ngIf="subtitle" class="subtitle">({{ subtitle }})</span>
 </div>
