replace dimitri buhon by hugo machefer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <app-resume></app-resume>
-    <div id="copyright">© Copyright - Dimitri Buhon</div>
+    <div id="copyright">© Copyright - Hugo Machefer</div>
 </div>
 <app-particles></app-particles>
