--- a/src/app/resume/topcard/topcard.component.html
+++ b/src/app/resume/topcard/topcard.component.html
@@ -27,7 +27,7 @@
         </li>
         <li *ngIf="info.portfolio">
           <span class="fa fa-bookmark"></span>
-          <a href="https://{{ info.portfolio }}" target="_blank">buhon.fr</a>
+          <a href="https://{{ info.portfolio }}" target="_blank">hugo-machefer.com</a>
         </li>
         <li>
           <span class="fa fa-linkedin-square"></span>
